--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,71 @@ html {
 }
 
 body {
+  height: 100%;
   font-size: 1.6rem;
   font-weight: 500;
   color: hsl(271, 36%, 24%);
   background-color: hsl(0, 0%, 98%);
   font-family: "Rubik", "Arial", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+  position: relative;
 }
 
+.bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.bg::before {
+  content: "";
+  width: 450px;
+  height: 90%;
+  background-color: blue;
+  /* border-bottom-left-radius: 25rem;
+  border-bottom-right-radius: 25rem; */
+  /* border-radius: 0 0 20rem 20rem; */
+  border-radius: 0% 0% 50% 50% / 10% 10% 25% 25%;
+  position: absolute;
+  top: 0;
+  left: -30px;
+}
+
+.container {
+  max-width: 830px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 128px;
+}
+
+.conatiner__item {}
+
+.illustration {
+  width: 250px;
+  height: 505px;
+  background-color: yellow;
+  border-radius: 50px;
+}
+
+.text-wrapper {}
+
+.title {
+  font-size: 4rem;
+  font-weight: 700;
+  margin-bottom: 3rem;
+}
+
+.text {
+  color: hsl(270, 7%, 64%);
+  line-height: 2;
+}
