--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 50px;
+  gap: 100px;
   position: relative;
 }
 
@@ -43,16 +43,25 @@ body {
 
 .bg::before {
   content: "";
-  width: 450px;
-  height: 90%;
-  background-color: blue;
-  /* border-bottom-left-radius: 25rem;
-  border-bottom-right-radius: 25rem; */
-  /* border-radius: 0 0 20rem 20rem; */
-  border-radius: 0% 0% 50% 50% / 10% 10% 25% 25%;
+  width: 460px;
+  height: 85%;
+  background: linear-gradient(35deg, hsl(264, 100%, 61%) 39%, hsl(293, 100%, 63%) 100%);
+  border-radius: 0% 0% 50% 50% / 10% 10% 30% 30%;
   position: absolute;
   top: 0;
-  left: -30px;
+  left: -50px;
+}
+
+.bg::after {
+  content: "";
+  width: 460px;
+  height: 85%;
+  background: linear-gradient(35deg, hsl(264, 100%, 61%) 39%, hsl(293, 100%, 63%) 100%);
+  border-radius: 50% 50% 0% 0% / 50% 50% 10% 10%;
+  opacity: .05;
+  position: absolute;
+  bottom: 0;
+  right: -150px;
 }
 
 .container {
